# mox

./: .env.example  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  create.sh  init.rs  main.rs  model.rs  node.rs  setup.rs  sshconfig.rs  template.sh  tui.rs
